GS-12335 GS: Fix alignment for upload image hover under my account section - deal with opacity of file input in IE8.

--- a/src/webapp/res/css/08_css3/opacity_shadow.css
+++ b/src/webapp/res/css/08_css3/opacity_shadow.css
@@ -14,36 +14,39 @@ General comments:
 
 */
 
+.opacity0 {
+/* 0% opaque */
+       opacity: 0; /* firefox, opera, safari, chrome, IE9 */
+        filter: alpha(opacity = 0); /* IE4 - 8 */
+          zoom: 1;
+}
+
 .opacity25 {
 /* 25% opaque */
-       opacity: 0.25; /* firefox, opera, safari, chrome */
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=25)"; /* IE 8 */
-       *filter: alpha(opacity = 25); /* IE 4 - 7 */
-          zoom: 1
+       opacity: 0.25; /* firefox, opera, safari, chrome, IE9 */
+        filter: alpha(opacity = 25); /* IE4 - 8 */
+          zoom: 1;
 }
 
 .opacity50 {
 /* 50% opaque */
        opacity: 0.50;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=50)";
-       *filter: alpha(opacity = 50);
-          zoom: 1
+        filter: alpha(opacity = 50);
+          zoom: 1;
 }
 
 .opacity75 {
 /* 75% opaque */
        opacity: 0.75;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=75)";
-       *filter: alpha(opacity = 75);
-          zoom: 1
+        filter: alpha(opacity = 75);
+          zoom: 1;
 }
 
 .opacity100 {
 /* fully opaque */
        opacity: 1;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=100)";
-       *filter: alpha(opacity = 100);
-          zoom: 1
+        filter: alpha(opacity = 100);
+          zoom: 1;
 }
 
 .box-shadow {
